--- a/web/src/assets/styles/global.css
+++ b/web/src/assets/styles/global.css
@@ -48,3 +48,14 @@ input,
 textarea {
   font: 500 1.6rem Poppins;
 }
+
+.container {
+  width: 90%;
+  max-width: 700px;
+}
+
+@media (min-width: 700px) {
+  :root {
+    font-size: 62.5%;
+  }
+}
